tests/negative/regex/range_error/input.ci
void main() {
    RegExp re = regexCompile("\d+", "");
    print(toString(regexTest(re, "123", -1)) + "\n");
}
